--- a/sketches/package.json
+++ b/sketches/package.json
@@ -13,6 +13,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "budo": "^11.7.0",
     "canvas-sketch": "^0.7.5",
-    "canvas-sketch-util": "^1.10.0"
+    "canvas-sketch-util": "^1.10.0",
+    "tweakpane": "^3.1.0"
   }
 }
