--- a/sketches/package.json
+++ b/sketches/package.json
@@ -14,6 +14,7 @@
     "budo": "^11.7.0",
     "canvas-sketch": "^0.7.5",
     "canvas-sketch-util": "^1.10.0",
+    "riso-colors": "^1.0.1",
     "tweakpane": "^3.1.0"
   }
 }
